
4. Fix: additional error checks for JSON encoding/decoding.

5. Fix: whitespace handling for JSON encoding/decoding.

6. Fix: boolean values now shown in env command.

7. Fix: an error is reported when bubble or heap sorting arrays containing undefined numeric or enumerated values, instead of raising an exception.

8. Fix: type checking on out mode parameters.

9. Fix: trailing whitespace in a prompt script shows an appropriate message instead of "statement expected".

10. New: New style error messages may include the location where an identifier was declared.

11. Change: configure will try to use find /usr/lib if locate command is not installed.

12. Change: very long identifier names will be replaced with the text "the identifier" in new style error messages.

13. Change: when using cd on a path to a non-directory, cd will attempt to change directory to the directory containing the file with an "Assuming" warning.  In a script, this is a suggested remedy in the error message.

14. Change: when using cd with a path with leading/trailing spaces, cd will attempt to change directory to the directory without spaces with an "Assuming" warning.  In a script, this is a suggested remedy in the error message.

15. Change; when using cd with the wrong slash delimiter, cd will attempt to use the correct directory delimiter with an "Assuming" warning.  In a script, this is a suggested remedy.

16. Change: umask will correct suspicious values, at the command prompt only.

17. Change: standard names PATH, HOME, PWD, OLDPWD and TERM may no longer be deleted with unset.  These names also disallowed in declarations of new variables.

18. Fix: design pragmas constraint mode error messages updated for the correct names.

19. Change: support for newer Raspberry Pi OS Bullseye releases.  Bookworm failing to compile due to an Ada internal error.

CHANGES SINCE 2.6.2

20. Fix: first item in an enumerated type no longer gives an undefined error when converting a record to JSON.
